# OpenPalm

./: .gitignore  README.md  help.txt  pyproject.toml
scripts/: install_macos.sh  openpalm.sh
src/openpalm/: __main__.py  agent_config.py  agent_models.py  agent_service.py  agent_state.py  app.py  channel_client.py  cli.py  command_executor.py  command_state.py  config.py  formatter.py  git_ops.py  job_store.py  logging_config.py  message_filter.py  models.py  oneoff_runner.py  project_registry.py  storage.py
src/openpalm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/openpalm/agent/: adapters.py
tests/: test_agent_service.py  test_command_executor.py  test_command_state.py  test_message_filter.py  test_oneoff_runner.py
