[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openpalm"
version = "0.1.0"
description = "OpenPalm CLI agent for macOS"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenPalm" }]
dependencies = [
  "neonize>=0.3.16.post0,<0.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
openpalm = "openpalm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
